--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             const ex = document.createElement('span');
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
+
+            console.log(0 instanceof HTMLElement);
+            console.log(0 instanceof Element);
         </script>
     </body>
 </html>
