--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
 
-            console.log(0 instanceof HTMLElement);
-            console.log(0 instanceof Element);
+            console.log();
+            console.log();
         </script>
     </body>
 </html>
