--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -38,7 +38,7 @@
                     for (const rows of nestedArray) {
                         const trElem = document.createElement('tr');
                         for (const items of rows) {
-                            trElem.appendChild(isHTMLElement(header) ?
+                            trElem.appendChild(isHTMLElement(items) ?
                                 initializeHTML('td', {appendChild: [items]}) :
                                 initializeHTML('td', {textContent: items}));
                         }
