--- a/index.html
+++ b/index.html
@@ -29,16 +29,13 @@
         <div class="container">
             <section id="main_content">
                 <div></div>
-                <span></span>
-                &#9679;
-                &#9660;
-                &#9650;
             </section>
         </div>
 
         <script>
             const div = document.querySelector('#main_content div');
-            const span = document.querySelector('#main_content span');
+
+            const testArray = [1,2,3,4,5,6,7,8,9,0];
             
             //var b = 'https://docs.google.com/spreadsheets/d/1gyn-6r_XBriYonFpj-RPkoQnCK36StTWJ0E5_yTU048/';
             //var [link, type] = b.match(new RegExp('https://docs.google.com/(spreadsheets|document)/d/.{44}/'));
@@ -49,6 +46,9 @@
             const ex = document.createElement('span');
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
+
+            console.log();
+            console.log();
         </script>
     </body>
 </html>
