--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -3,7 +3,7 @@
     <head>
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
-            import {AsyncFunc, Compare} from "/univasset/scripts/externaljavascript.js";
+            import {AsyncFunc, Compare, Check} from "/univasset/scripts/externaljavascript.js";
             import {initializeHTML} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
             table(document.querySelector('#main_content div'),
@@ -11,10 +11,6 @@
                 {sort: true, frzcol: true, frzhdr: true}
             );
             
-            function isHTMLElement(element) {
-                return [HTMLElement, DocumentFragment].some(class_instance => element instanceof class_instance);
-            }
-
             /** @param {HTMLElement} grouperElem
              * @param {Array[]} tableMatrix */
             function table(grouperElem, tableMatrix, {sort = false, filter = false, frzcol = false, frzhdr = false} = {}) {
@@ -26,7 +22,7 @@
 
                 const headertr = document.createElement('tr');
                 for (const header of tableMatrix.shift()) {
-                    headertr.appendChild(isHTMLElement(header) ?
+                    headertr.appendChild(Check.typeof(header) === 'dom' ?
                         initializeHTML('th', {appendChild: [header]}) :
                         initializeHTML('th', {textContent: header}));
                 }
@@ -38,7 +34,7 @@
                     for (const rows of nestedArray) {
                         const trElem = document.createElement('tr');
                         for (const items of rows) {
-                            trElem.appendChild(isHTMLElement(items) ?
+                            trElem.appendChild(Check.typeof(header) === 'dom' ?
                                 initializeHTML('td', {appendChild: [items]}) :
                                 initializeHTML('td', {textContent: items}));
                         }
@@ -281,7 +277,7 @@
         }
 
         .func_table {
-            height: 100vh;
+            height: 95vh;
         }
         /* #endregion */
     </style>
