--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             const ex = document.createElement('span');
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
+
+            console.log(testArray.splice(0))
+            console.log(testArray)
+
         </script>
     </body>
 </html>
