--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -34,7 +34,7 @@
                     for (const rows of nestedArray) {
                         const trElem = document.createElement('tr');
                         for (const items of rows) {
-                            trElem.appendChild(Check.typeof(header) === 'dom' ?
+                            trElem.appendChild(Check.typeof(items) === 'dom' ?
                                 initializeHTML('td', {appendChild: [items]}) :
                                 initializeHTML('td', {textContent: items}));
                         }
