--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             ex.textContent = 'jkl;'
             span.appendChild(ex); */
 
-            console.log(testArray.splice(0))
-            console.log(testArray)
+            console.log()
+            console.log()
 
         </script>
     </body>
