--- a/GFL/elites.html
+++ b/GFL/elites.html
@@ -4,26 +4,18 @@
         <script defer type="text/javascript" src="/univasset/scripts/include/includefile.js"></script>
         <script type="module">
             import {AsyncFunc, zip} from '/univasset/scripts/externaljavascript.js';
-            import {initializeHTML} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
+            import {table} from '/univasset/scripts/htmlgenerator/htmlgenerator.js';
 
             const jsonObject = await AsyncFunc.getJSON('https://raw.githubusercontent.com/randomqwerty/GFLData/main/en/stc/enemy_character_type.json');
-            const elite = new Set(), nonelite = new Set(), tbody = document.createElement('tbody');
+            const matrix = [['No', 'Elites', 'Non-Elites']];
+            const elite = new Set(), nonelite = new Set();
 
             for (const {passive_skill, code} of jsonObject) (String(passive_skill).includes('200304') ? nonelite : elite).add(code);
 
-            for (const [index, [unitE, unitNE]] of Object.entries(Array.from(zip(true, elite, nonelite)))) {
-                const trElem = document.createElement('tr');
+            for (const [index, [unitE, unitNE]] of Object.entries(Array.from(zip(true, elite, nonelite))))
+                matrix.push([Number(index) + 1, unitE, unitNE ?? '']);
 
-                trElem.append(
-                    initializeHTML('td', {textContent: Number(index) + 1}),
-                    initializeHTML('td', {textContent: unitE}),
-                    initializeHTML('td', {textContent: unitNE ?? ''})
-                );
-
-                tbody.appendChild(trElem);
-            }
-
-            document.querySelector('table').appendChild(tbody);
+            table(document.querySelector('#main_content div'), matrix);
         </script>
 
         <meta charset='utf-8'>
@@ -51,17 +43,7 @@
 
         <div class="container">
             <section id="main_content">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>No</th>
-                            <th>Elites</th>
-                            <th>Non-Elites</th>
-                        </tr>
-                    </thead>
-                    <!--tbody></tbody-->
-                </table>
-
+                <div></div>
                 <p>Taken from <a href="https://github.com/randomqwerty/GFLData/blob/main/en/stc/enemy_character_type.json">randomqwerty/GFLData</a>.</p>
             </section>
         </div>
