--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -8,9 +8,11 @@
             gdocDropdown(document.querySelector('#main_content div'),
                 ["iana's Unit Rating & Teambuilding Spreadsheet(Mirror)", "https://docs.google.com/spreadsheets/d/1IrE5wimiFWYMxUUWQ8VrJoe0zDUPx8OI4rWja9hKQB4"],
                 ["iana's Unit Rating & Teambuilding Spreadsheet", "https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o"],
+                ['PNC Algo Mainstat Viability List', 'https://docs.google.com/spreadsheets/d/1DSK4d94RdRCV_ji7NXC0Klyf7v_dUkIY9n9qW9y2UeQ'],
                 ["PNC Neural Cloud Projections", "https://docs.google.com/spreadsheets/d/1pUMySKTl-rp1PGwUENAHN7PxEcL8rTVTGjZ6MLxMBtU"],
                 ["Neural Cloud Numbers Sheet", "https://docs.google.com/spreadsheets/d/1GqYRwrJIaYdr-wziyosl7MCKplBPIWN7DhXVDhvMqIc"],
-                ["Algorithms", "https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU"]
+                ['PNC Algorithm Sheet', 'https://docs.google.com/spreadsheets/d/1qP8rHMCwBqgxBdnf-qEVZRo3yXY2f4Ohju7GRmu7lNw'],
+                ["Algorithms", "https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU"],
             )
         </script>
 
