--- a/PNC/unitstats.html
+++ b/PNC/unitstats.html
@@ -53,13 +53,13 @@
         .func_table th[data-sort="hi"] {
             background: linear-gradient(135deg, #1b1b1b, transparent 50%),
                 linear-gradient(-135deg, #1b1b1b, transparent 50%),
-                linear-gradient(blue, gray 50%);
+                linear-gradient(blue, gray 50%) !important;
         }
 
         .func_table th[data-sort="lo"] {
             background: linear-gradient(45deg, #1b1b1b, transparent 50%),
                 linear-gradient(-45deg, #1b1b1b, transparent 50%),
-                linear-gradient(gray 50%, red);
+                linear-gradient(gray 50%, red) !important;
         }
     </style>
 
