--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -107,6 +107,7 @@
                     <dd><a href="https://docs.google.com/spreadsheets/d/10LJdksnM3zipOb72IneJD7WVp3765JYJEGg0LnodzDI">Spreadsheet Guide</a></dd>
 
                     <dt>Angry Trap Midget/Matsuda</dt>
+                    <dd><a href="https://gfl.matsuda.tips/post/getting-started">Getting Started</a></dd>
                     <dd><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">First Steps</a></dd>
                     <dd><a href="https://gfl.matsuda.tips/blog/">Guides</a></dd>
 
