--- a/GFL/index.html
+++ b/GFL/index.html
@@ -39,6 +39,12 @@
 
         <div class="container">
             <section id="main_content">
+                <!--div id="section_type">
+                    <label><input type="radio" name="pages" value="timer" checked><h2>Event Timer</h2></label>
+                    <label><input type="radio" name="pages" value="links"><h2>Links & Logs</h2></label>
+                    <label><input type="radio" name="pages" value="faqs"><h2>FAQs Sheet</h2></label>
+                </div-->
+
                 <table>
                     <tr>
                         <td><a href="./starter">New Player Guide</a></td>
